# Humanoid_AI_Hackathon_Book

./: .env.example  .gitignore  .mcp.json
.claude/: settings.local.json
.claude/agents/: Auth-Identity-Agent.md  Curriculum-Author-Agent.md  Docusaurus-Frontend-Agent.md  GenAI-VLA-Agent.md  Personalization-Agent.md  QA-Reviewer-Agent.md  RAG-Backend-Agent.md  Ros-System-Agent.md  Sim-Physics-Agent.md  Spec-Architect-Agent.md  Urdu-Translator-Agent.md  auth-security-architect.md
.claude/skills/: chapter-outline-generator.md  content-consistency-checker.md  database-design.md  deployment-fixer.md  fastapi-best-practices.md  frontend-component-generator.md  mdx-chapter-generator.md  personalization-logic.md  rag-chunking-embedding.md  ros-code-explainer.md  selected-text-answer.md  technical-fact-checker.md  ui-ux-review.md  urdu-technical-translation.md  (+1 more)
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  test_rag.py
backend/.claude/: settings.local.json
backend/api/: index.py
backend/app/: __init__.py  config.py  main.py
backend/app/db/: __init__.py  database.py  schema.sql
backend/app/middleware/: __init__.py  error_handler.py  logging.py
backend/app/models/: __init__.py  chat.py
backend/app/routers/: __init__.py  chat.py
backend/app/schemas/: __init__.py  base.py  chat.py
backend/app/services/: __init__.py  chat_service.py  embedding_service.py  qdrant_client.py  rag_service.py
website/: .eslintrc.js  .prettierignore  .prettierrc  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+56 files in other folders)
